--- a/server/core/templates/credential_update_add_password_partial.html
+++ b/server/core/templates/credential_update_add_password_partial.html
@@ -7,8 +7,12 @@
 
         (% if let PwdCheckResult::Failure with { pwd_equal, warnings } = check_res %)
             (% let pwd_equal = pwd_equal.clone() %)
-            (% let potentially_invalid_input_class = "is-invalid"|blank_if(warnings.len() == 0) %)
-            (% let potentially_invalid_reinput_class = "is-invalid"|blank_iff(pwd_equal) %)
+            (% if !warnings.is_empty() %)
+                (% let potentially_invalid_input_class = "is-invalid" %)
+            (% endif %)
+            (% if pwd_equal %)
+                (% let potentially_invalid_reinput_class = "is-invalid" %)
+            (% endif %)
         (% endif %)
 
         <label for="new-password" class="form-label">Enter New Password</label>
