--- a/server/core/templates/credential_update_add_totp_partial.html
+++ b/server/core/templates/credential_update_add_totp_partial.html
@@ -23,8 +23,12 @@
         (% if let TotpCheckResult::Failure with { wrong_code, broken_app, warnings } = check_res %)
             (% let wrong_code = wrong_code.clone() %)
             (% let broken_app = broken_app.clone() %)
-            (% let potentially_invalid_name_class = "is-invalid"|blank_if(warnings.len() == 0) %)
-            (% let potentially_invalid_check_class = "is-invalid"|blank_iff(wrong_code) %)
+            (% if !warnings.is_empty() %)
+                (% let potentially_invalid_name_class = "is-invalid" %)
+            (% endif %)
+            (% if wrong_code %)
+                (% let potentially_invalid_check_class = "is-invalid" %)
+            (% endif %)
         (% endif %)
 
         <label for="new-totp-name" class="form-label">Enter a name for your TOTP</label>
