--- a/server/core/templates/credentials_reset_form.html
+++ b/server/core/templates/credentials_reset_form.html
@@ -23,7 +23,11 @@
                     name="token"
                     autofocus
                     aria-describedby="unknown-reset-token-validation-feedback"
-                    class='form-control (( "is-invalid"|blank_iff(!wrong_code) ))'
+                    (% if wrong_code %)
+                    class='form-control is-invalid'
+                    (% else %)
+                    class='form-control'
+                    (% endif %)
             >
         (% if wrong_code %)
             <div id="unknown-reset-token-validation-feedback" class="invalid-feedback">
