--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -15,8 +15,12 @@
             <hr class="my-4" >
             (% for warning in warnings %)
                 (% let is_danger = [CURegWarning::WebauthnAttestationUnsatisfiable, CURegWarning::Unsatisfiable].contains(warning) %)
+                (% if is_danger %)
+                    <div class='alert alert-danger' role="alert">
+                (% else %)
+                    <div class='alert alert-warning' role="alert">
+                (% endif %)
 
-                <div class='alert alert-(( is_danger|ternary("danger", "warning") ))' role="alert">
                 (% match warning %)
                     (% when CURegWarning::MfaRequired %)
                         Multi-Factor Authentication is required for your account. Either add TOTP or remove your password in favour of passkeys to submit.
@@ -97,7 +101,9 @@
                         type="submit"
                         hx-post="/ui/api/cu_commit"
                         hx-boost="false"
-                        (( "disabled"|blank_if(warnings.len() == 0) ))
+                        (% if !warnings.is_empty() %)
+                        disabled
+                        (% endif %)
                 >Submit Changes</button>
             </span>
         </div>
