--- a/server/core/templates/credential_update_add_passkey_partial.html
+++ b/server/core/templates/credential_update_add_passkey_partial.html
@@ -6,6 +6,7 @@
         <button id="passkeyNamingSafariBtn" class="btn btn-primary">Begin Passkey Enrolment</button>
 
         <form id="passkeyNamingForm" class="g-2 d-none">
+            <b>Adding a new passkey</b>
             <label for="passkey-label" class="form-label">Please name this Passkey</label>
             <input type="text" name="name" id="passkey-label" autofocus required class="form-control">
 
@@ -19,8 +20,8 @@
                         hx-post="/ui/api/finish_passkey"
                         hx-vals='{"class": "(( class ))"}'
                         id="passkeyNamingSubmitBtn"
-                        class="btn btn-success d-none ms-2" disabled
-                >Submit</button>
+                        class="btn btn-primary d-none ms-2" disabled
+                >Add</button>
             </div>
         </form>
     </div>
