--- a/server/core/templates/credential_update_add_totp_partial.html
+++ b/server/core/templates/credential_update_add_totp_partial.html
@@ -91,7 +91,7 @@
                     hx-select="#newTotpForm > *"
                     hx-vals='{"ignoreBrokenApp": false}'
                     hx-include="#newTotpForm"
-            >Submit</button>
+            >Add</button>
         (% endif %)
     </div>
 </div>
