--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -1,5 +1,5 @@
 <div class="row g-3" id="credentialUpdateDynamicSection" hx-on::before-swap="stillSwapFailureResponse(event)">
-    <form class="needs-validation" novalidate>
+    <form class="needs-validation mb-5" novalidate>
         (% match ext_cred_portal %)
             (% when CUExtPortal::None %)
             (% when CUExtPortal::Hidden %)
@@ -91,21 +91,27 @@
         (% let primary_state = primary_state %)
         (% include "credentials_update_primary.html" %)
 
-        <hr class="my-4"/>
+        <div class="my-5"></div>
+        <div class="my-5"></div>
 
-        <div class="d-flex flex-row flex-wrap justify-content-between">
-            <button class="btn btn-danger btn-lg" hx-post="/ui/api/cu_cancel" hx-target="body">Cancel</button>
-            <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" data-bs-title="Resolve the warnings at the top.">
-                <button
-                        class="btn btn-success btn-lg"
-                        type="submit"
-                        hx-post="/ui/api/cu_commit"
-                        hx-boost="false"
-                        (% if !warnings.is_empty() %)
-                        disabled
-                        (% endif %)
-                >Submit Changes</button>
-            </span>
+        <div id="cred-update-commit-bar">
+            <div class="d-flex justify-content-center align-content-center flex-column">
+                <span class="py-1"><b>Careful</b> - save when you're done:</span>
+            </div>
+            <div>
+                <button class="btn btn-danger" hx-post="/ui/api/cu_cancel" hx-target="body">Cancel</button>
+                <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" data-bs-title="Resolve the warnings at the top.">
+                    <button
+                            class="btn btn-success"
+                            type="submit"
+                            hx-post="/ui/api/cu_commit"
+                            hx-boost="false"
+                            (% if !warnings.is_empty() %)
+                            disabled
+                            (% endif %)
+                    >Save Changes</button>
+                </span>
+            </div>
         </div>
     </form>
 </div>
