--- a/server/core/templates/credentials_update_primary.html
+++ b/server/core/templates/credentials_update_primary.html
@@ -28,7 +28,7 @@
                 <h6><b>Time-based One Time Password (TOTP)</b></h6>
                 <p>TOTPs are 6 digit codes generated on-demand as a second authentication factor.</p>
                 <p>
-                    <button type="button" class="btn btn-success" hx-post="/ui/reset/add_totp">
+                    <button type="button" class="btn btn-primary" hx-post="/ui/reset/add_totp">
                         Add TOTP
                     </button>
                 </p>
@@ -48,13 +48,13 @@
                 <h6><b>Time-based One Time Password (TOTP)</b></h6>
                 <p>TOTPs are 6 digit codes generated on-demand as a second authentication factor.</p>
                 (% for totp in totp_set %)
-                    <button type="button" class="btn btn-warning" hx-post="/ui/api/remove_totp" hx-vals='{"name": "(( totp ))"}'>
+                    <button type="button" class="btn btn-warning mb-2" hx-post="/ui/api/remove_totp" hx-vals='{"name": "(( totp ))"}'>
                         Remove totp (( totp ))
                     </button>
                 (% endfor %)
 
                 <p>
-                    <button type="button" class="btn btn-success" hx-post="/ui/reset/add_totp">
+                    <button type="button" class="btn btn-primary" hx-post="/ui/reset/add_totp">
                         Add TOTP
                     </button>
                 </p>
