--- a/server/core/templates/credentials_reset_form.html
+++ b/server/core/templates/credentials_reset_form.html
@@ -13,7 +13,7 @@
     <center>
         <img src="/pkg/img/logo-square.svg" alt="Kanidm" class="kanidm_logo"/>
         <h2>Credential Reset</h2>
-        <h3>(( domain ))</h3>
+        <h3>(( domain_info.display_name() ))</h3>
     </center>
     <form class="mb-3">
         <div>
