--- a/server/core/templates/credentials_reset.html
+++ b/server/core/templates/credentials_reset.html
@@ -12,7 +12,7 @@
         <div class="py-3 text-center">
             <h3>Updating Credentials</h3>
             <p>(( names ))</p>
-            <p>(( domain ))</p>
+            <p>(( domain_info.display_name() ))</p>
         </div>
         (( credentials_update_partial|safe ))
     </main>
