load scripts only when needed

--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -1,3 +1,6 @@
+<script type="module" src="/pkg/modules/cred_update.mjs" async></script>
+<script src="/pkg/external/base64.js" async></script>
+
 <div class="row g-3" id="credentialUpdateDynamicSection" hx-on::before-swap="stillSwapFailureResponse(event)">
     <form class="needs-validation" novalidate>
         (% match ext_cred_portal %)
