--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -1,5 +1,5 @@
 <div class="row g-3" id="credentialUpdateDynamicSection" hx-on::before-swap="stillSwapFailureResponse(event)">
-    <form class="needs-validation mb-5" novalidate>
+    <form class="needs-validation mb-5 pb-5" novalidate>
         (% match ext_cred_portal %)
             (% when CUExtPortal::None %)
             (% when CUExtPortal::Hidden %)
@@ -91,26 +91,27 @@
         (% let primary_state = primary_state %)
         (% include "credentials_update_primary.html" %)
 
-        <div class="my-5"></div>
-        <div class="my-5"></div>
-
-        <div id="cred-update-commit-bar">
-            <div class="d-flex justify-content-center align-content-center flex-column">
-                <span class="py-1"><b>Careful</b> - save when you're done:</span>
-            </div>
-            <div>
-                <button class="btn btn-danger" hx-post="/ui/api/cu_cancel" hx-target="body">Cancel</button>
-                <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" data-bs-title="Resolve the warnings at the top.">
-                    <button
-                            class="btn btn-success"
-                            type="submit"
-                            hx-post="/ui/api/cu_commit"
-                            hx-boost="false"
-                            (% if !warnings.is_empty() %)
-                            disabled
-                            (% endif %)
-                    >Save Changes</button>
+        <div id="cred-update-commit-bar" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-body">
+                <span class="d-flex align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-floppy2-fill" viewBox="0 0 16 16">
+                        <path d="M12 2h-2v3h2z"/>
+                        <path d="M1.5 0A1.5 1.5 0 0 0 0 1.5v13A1.5 1.5 0 0 0 1.5 16h13a1.5 1.5 0 0 0 1.5-1.5V2.914a1.5 1.5 0 0 0-.44-1.06L14.147.439A1.5 1.5 0 0 0 13.086 0zM4 6a1 1 0 0 1-1-1V1h10v4a1 1 0 0 1-1 1zM3 9h10a1 1 0 0 1 1 1v5H2v-5a1 1 0 0 1 1-1"/>
+                    </svg>
+                    <b class="px-1">Careful</b>- save when you're done:
                 </span>
+                <div class="mt-2 pt-2 border-top">
+                    <button class="btn btn-danger" hx-post="/ui/api/cu_cancel" hx-target="body">Cancel</button>
+                    <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" data-bs-title="Resolve the warnings at the top.">
+                        <button
+                                class="btn btn-success"
+                                type="submit"
+                                hx-post="/ui/api/cu_commit"
+                                hx-boost="false"
+                                (% if !warnings.is_empty() %)disabled(% endif %)
+                        >Save Changes</button>
+                    </span>
+                </div>
             </div>
         </div>
     </form>
