show added ssh keys

--- a/server/core/static/style.css
+++ b/server/core/static/style.css
@@ -190,3 +190,10 @@ footer {
   width: var(--icon-size);
   height: var(--icon-size);
 }
+
+.ssh-list-icon {
+  --icon-size: 32px;
+  width: var(--icon-size); 
+  height: var(--icon-size); 
+  transform: rotate(35deg);
+}
