[htmx] Make it harder to miss the save button on the cred update page (#3013)

--- a/server/core/static/style.css
+++ b/server/core/static/style.css
@@ -268,7 +268,11 @@ body {
   height: fit-content;
 }
 
-
-
-
-
+#cred-update-commit-bar {
+  display: block;
+  position: fixed;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+}
