--- a/server/core/templates/login_base.html
+++ b/server/core/templates/login_base.html
@@ -6,18 +6,21 @@
 (% endblock %)
 
 (% block body %)
-	<main id="main" class="flex-shrink-0 form-signin">
-		<center>
-			(% if domain_custom_image %)
-			<img src="/ui/images/domain" alt="Kanidm" class="kanidm_logo"/>
-			(% else %)
-			<img src="/pkg/img/logo-square.svg" alt="Kanidm" class="kanidm_logo"/>
-			(% endif %)
-			<h3>Kanidm</h3>
-		</center>
-		<div id="login-form-container" class="container">
-			(% block logincontainer %)
-			(% endblock %)
-		</div>
-	</main>
+<main id="main" class="flex-shrink-0 form-signin">
+	<center>
+		(% if domain_custom_image %)
+		<img src="/ui/images/domain"
+			alt="Kanidm" class="kanidm_logo" />
+		(% else %)
+		<img
+			src="/pkg/img/logo-square.svg?v=((crate::https::cache_buster::get_cache_buster_key()))"
+			alt="Kanidm" class="kanidm_logo" />
+		(% endif %)
+		<h3>Kanidm</h3>
+	</center>
+	<div id="login-form-container" class="container">
+		(% block logincontainer %)
+		(% endblock %)
+	</div>
+</main>
 (% endblock %)
