--- a/server/core/templates/navbar.html
+++ b/server/core/templates/navbar.html
@@ -1,22 +1,33 @@
 <nav class="(( crate::https::ui::CSS_NAVBAR_NAV ))">
     <div class="container-fluid">
-        <a class="(( crate::https::ui::CSS_NAVBAR_BRAND ))" href="/ui/apps">Kanidm</a>
+        <a class="(( crate::https::ui::CSS_NAVBAR_BRAND ))"
+            href="/ui/apps">Kanidm</a>
 
         <!-- this shows a button on mobile devices to open the menu-->
-        <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <img src="/pkg/img/logo-square.svg" alt="Toggle navigation" class="navbar-toggler-img" />
+        <button class="navbar-toggler bg-white" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <img
+                src="/pkg/img/logo-square.svg?v=((crate::https::cache_buster::get_cache_buster_key()))"
+                alt="Toggle navigation" class="navbar-toggler-img" />
         </button>
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="(( crate::https::ui::CSS_NAVBAR_LINKS_UL ))">
                 <li class="mb-1">
-                    <a class="nav-link" href="/ui/apps" hx-target="main" hx-select="main" hx-swap="outerHTML"><span data-feather="file"></span>Apps</a>
+                    <a class="nav-link" href="/ui/apps" hx-target="main"
+                        hx-select="main" hx-swap="outerHTML"><span
+                            data-feather="file"></span>Apps</a>
                 </li>
                 <li class="mb-1">
-                    <a class="nav-link" href="/ui/profile" hx-target="main" hx-select="main" hx-swap="outerHTML"><span data-feather="file"></span>Profile</a>
+                    <a class="nav-link" href="/ui/profile" hx-target="main"
+                        hx-select="main" hx-swap="outerHTML"><span
+                            data-feather="file"></span>Profile</a>
                 </li>
                 <li class="mb-1">
-                    <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signoutModal">Sign out</a>
+                    <a class="nav-link" href="#" data-bs-toggle="modal"
+                        data-bs-target="#signoutModal">Sign out</a>
                 </li>
             </ul>
         </div>
