--- a/server/core/templates/base.html
+++ b/server/core/templates/base.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8"/>
+		<meta charset="utf-8" />
 		<meta name="theme-color" content="white" />
 		<meta name="viewport" content="width=device-width" />
 
 		<title>(% block title %)(( title )) - Kanidm(% endblock %)</title>
 
-		<link rel="icon" href="/pkg/img/favicon.png" />
-		<link rel="apple-touch-icon" href="/pkg/img/logo-256.png" />
-		<link rel="apple-touch-icon" sizes="180x180"
-			href="/pkg/img/logo-180.png" />
-		<link rel="apple-touch-icon" sizes="192x192"
-			href="/pkg/img/logo-192.png" />
-		<link rel="apple-touch-icon" sizes="512x512"
-			href="/pkg/img/logo-square.svg" />
+		(% include "base_icons.html" %)
 
-		<link rel="stylesheet" href="/pkg/external/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"/>
-		<script src="/pkg/external/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
-		<link rel="stylesheet" href="/pkg/style.css" />
+		<link rel="stylesheet"
+			href="/pkg/external/bootstrap.min.css?v=((crate::https::cache_buster::get_cache_buster_key()))"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" />
+		<script
+			src="/pkg/external/bootstrap.bundle.min.js?v=((crate::https::cache_buster::get_cache_buster_key()))"
+			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
+		<link rel="stylesheet"
+			href="/pkg/style.css?v=((crate::https::cache_buster::get_cache_buster_key()))" />
 
 		(% block head %)(% endblock %)
 	</head>
@@ -26,7 +24,8 @@
 		(% block body %)(% endblock %)
 		<footer class="footer mt-auto py-3 bg-light text-end">
 			<div class="container">
-				<span class="text-muted">Powered by <a href="https://kanidm.com">Kanidm</a></span>
+				<span class="text-muted">Powered by <a
+						href="https://kanidm.com">Kanidm</a></span>
 			</div>
 		</footer>
 	</body>
