change input type for totp to be number.

--- a/server/core/templates/login.html
+++ b/server/core/templates/login.html
@@ -28,7 +28,7 @@
 			class="input-hidden"
 			id="totp"
 			name="totp"
-			type="text"
+			type="number"
 			autocomplete="one-time-code"
 			value=""
 		/>
