--- a/server/core/templates/login_totp.html
+++ b/server/core/templates/login_totp.html
@@ -15,7 +15,7 @@
 			class="autofocus form-control"
 			id="totp"
 			name="totp"
-			type="text"
+			type="number"
 			autocomplete="one-time-code"
 			value="(( totp ))"
 			required=true
