--- a/server/core/static/style.css
+++ b/server/core/static/style.css
@@ -271,7 +271,7 @@ body {
 #cred-update-commit-bar {
   display: block;
   position: fixed;
-  bottom: 5%;
+  /* bottom: 5%; */
   left: 50%;
   transform: translateX(-50%);
   background: white;
