more constants less strings

--- a/server/core/templates/credentials_reset_form.html
+++ b/server/core/templates/credentials_reset_form.html
@@ -50,7 +50,7 @@
             Return to the home page
         </button>
         <button class="btn btn-primary"
-            hx-get="/ui/reset"
+            hx-get=(Urls::CredReset)
             hx-include="#token"
             hx-target="#cred-reset-form" hx-select="#cred-reset-form"
             hx-swap="outerHTML"
