--- a/server/core/templates/navbar.html
+++ b/server/core/templates/navbar.html
@@ -16,12 +16,12 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="(( crate::https::ui::CSS_NAVBAR_LINKS_UL ))">
                 <li class="mb-1">
-                    <a class="nav-link" href="/ui/apps" hx-target="main"
+                    <a class="nav-link" href="(Urls::Profile)" hx-target="main"
                         hx-select="main" hx-swap="outerHTML"><span
                             data-feather="file"></span>Apps</a>
                 </li>
                 <li class="mb-1">
-                    <a class="nav-link" href="/ui/profile" hx-target="main"
+                    <a class="nav-link" href="(Urls::Profile)" hx-target="main"
                         hx-select="main" hx-swap="outerHTML"><span
                             data-feather="file"></span>Profile</a>
                 </li>
