--- a/server/core/templates/user_settings_partial_base.html
+++ b/server/core/templates/user_settings_partial_base.html
@@ -11,7 +11,7 @@
 <main class="container-xxl pb-5">
     <div class="d-flex flex-sm-row flex-column">
         <div class="list-group side-menu flex-shrink-0">
-            (% call side_menu_item("Profile", "/ui/profile",
+            (% call side_menu_item("Profile", "(Urls::Profile)",
             ProfileMenuItems::UserProfile, "person") %)
             (% call side_menu_item("SSH Keys", "/ui/ssh_keys",
             ProfileMenuItems::SshKeys, "key") %)
