--- a/server/core/templates/user_settings_posix_partial.html
+++ b/server/core/templates/user_settings_posix_partial.html
@@ -13,7 +13,7 @@ Unix/Posix Settings
     (% if can_rw %)
         <button class="btn btn-primary" type="button" hx-post="/ui/api/user_settings/edit_posix">Edit</button>
     (% else %)
-        <a href="/ui/profile/unlock" hx-boost="false">
+        <a href="(Urls::ProfileUnlock)" hx-boost="false">
             <button class="btn btn-primary" type="button">Unlock Edit 🔒</button>
         </a>
     (% endif %)
