--- a/server/core/templates/navbar.html
+++ b/server/core/templates/navbar.html
@@ -16,14 +16,12 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="(( crate::https::ui::CSS_NAVBAR_LINKS_UL ))">
                 <li class="mb-1">
-                    <a class="nav-link" href="(Urls::Profile)" hx-target="main"
-                        hx-select="main" hx-swap="outerHTML"><span
-                            data-feather="file"></span>Apps</a>
+                    <a class="nav-link" href=((Urls::Apps))>
+                        <span data-feather="file"></span>Apps</a>
                 </li>
                 <li class="mb-1">
-                    <a class="nav-link" href="(Urls::Profile)" hx-target="main"
-                        hx-select="main" hx-swap="outerHTML"><span
-                            data-feather="file"></span>Profile</a>
+                    <a class="nav-link" href=((Urls::Profile))>
+                        <span data-feather="file"></span>Profile</a>
                 </li>
                 <li class="mb-1">
                     <a class="nav-link" href="#" data-bs-toggle="modal"
