--- a/server/core/templates/user_settings_profile_partial.html
+++ b/server/core/templates/user_settings_profile_partial.html
@@ -38,9 +38,9 @@ Profile
     <!-- Edit button -->
     <div class="pt-4">
         (% if can_rw %)
-            <button class="btn btn-primary" type="button" hx-post="/ui/api/user_settings/edit_profile">Edit</button>
+            <button class="btn btn-primary" type="button" hx-post="/ui/api/user_settings/edit_profile" disabled>Edit (Currently Not Working!)</button>
         (% else %)
-            <a href="(Urls::ProfileUnlock)" hx-boost="false">
+            <a href=(Urls::ProfileUnlock) hx-boost="false">
                 <button class="btn btn-primary" type="button">Unlock Edit 🔒</button>
             </a>
         (% endif %)
